# Template

.github/agents/: aakash.agent.md
RAG/: .env.example  CLAUDE.md  main.py  pyproject.toml
RAG/.claude/skills/ai-architect/: SKILL.md
RAG/.claude/skills/ai-architect/reference/: agent-template.md  patterns.md  rag-template.md
RAG/config/: settings.py
RAG/config/prompts/: entity_extraction.txt  relationship_extraction.txt
RAG/connectors/: base.py  filesystem.py  github.py  mcp_bridge.py
RAG/evals/: harness.py  metrics.py
RAG/extractors/: llm_extractor.py  skill_extractor.py  spacy_ner.py  tree_sitter_parser.py
RAG/graph/: builder.py  resolver.py  schema.py  store.py
RAG/guards/: input_guard.py  output_guard.py
RAG/models/: entities.py  inputs.py  relationships.py  state.py
RAG/monitoring/: drift.py  logger.py
RAG/pipelines/ingestion/: graph.py  nodes.py
RAG/services/: embeddings.py  llm.py  vectorstore.py
RAG/tests/unit/: test_resolver.py  test_skill_extractor.py
