[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-graph-pipeline"
version = "0.1.0"
description = "Knowledge Graph construction pipeline: NER + tree-sitter + MCP + LangGraph"
requires-python = ">=3.11"

dependencies = [
    # LangChain / LangGraph
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-chroma>=0.1",
    "langgraph>=0.2",

    # AI / LLM
    "openai>=1.50",

    # NER
    "spacy>=3.7",
    # After install: python -m spacy download en_core_web_trf
    # Or lightweight: python -m spacy download en_core_web_sm

    # Code parsing
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",

    # Graph
    "networkx>=3.3",
    # Optional Neo4j: "neo4j>=5.0",

    # HTTP (MCP bridge)
    "httpx>=0.27",

    # Config / validation
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",

    # GitHub connector (optional, install separately)
    # "PyGithub>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]
neo4j = ["neo4j>=5.0"]
github = ["PyGithub>=2.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
